--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,6 +1,11 @@
 .descrBlock {
-    padding: 10px;
+  padding: 10px;
+
 }
 img {
-    width: 100%;
+  width: 100%;
+}
+.userPhoto {
+  width: 150px;
+  height: 150px;
 }
